[artf16001] Changed the z-index of the user-name menu to allow it to appear correctly in the display page.

--- a/dcm4chee/xero/trunk/xero-war/src/main/webapp/style/general.css
+++ b/dcm4chee/xero/trunk/xero-war/src/main/webapp/style/general.css
@@ -80,6 +80,7 @@ div.studyTray, div.seriesToolbar {
 
 div.rootMenu {
 	float: right;
+	z-index: 60;
 }
 
 .toolItem {
